src/test/ui/unsized-locals/issue-30276-feature-flagged.stderr
warning: the feature `unsized_locals` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-30276-feature-flagged.rs:1:12
   |
LL | #![feature(unsized_locals)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #48055 <https://github.com/rust-lang/rust/issues/48055> for more information

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/issue-30276-feature-flagged.rs:7:29
   |
LL |     let _x: fn(_) -> Test = Test;
   |                             ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
